PCHR-1302: Add test cases, files and initial code

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
@@ -1,7 +1,10 @@
 <div class="my-leave-page">
   <div class="button-container">
     <div class="btn-group">
+      <!--
       <button type="button" class="btn btn-primary" ng-click="myleave.showModal()">Record New Absence</button>
+    -->
+      <button type="button" class="btn btn-primary" lr-model-directive>Record New Absence</button>
       <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
               data-toggle="dropdown">
         <span class="caret"></span>
