--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-request.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-request.html
@@ -226,5 +226,5 @@
           ng-click="modal.closeModal()">
     Back
   </button>
-  <button type="submit" class="btn btn-primary">Save</button>
+  <button type="submit" class="btn btn-primary" ng-click="modal.saveModal()">Save</button>
 </div>
