--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-request.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-request.html
@@ -5,7 +5,14 @@
   </button>
   <h4 class="modal-title">Leave Request</h4>
 </div>
-<div class="modal-body chr_leave-request-form">
+
+<div ng-show="modal.leaveRequest.isAdmin"
+     class="row chr_leave-request-modal__user-info">
+    <span class="col-xs-6 chr_leave-request-modal__name">Lawrence Longnamesburg (81)</span>
+    <span class="col-xs-6 chr_leave-request-modal__status">Awaiting Approval</span>
+</div>
+
+<div class="modal-body chr_leave-request-modal__form">
   <div class="row">
     <div class="col-xs-12">
       <div class="chr_custom-select chr_custom-select--full">
@@ -19,7 +26,7 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <uib-tabset class="chr_leave-request-form__tab">
+      <uib-tabset class="chr_leave-request-modal__tab">
 
         <uib-tab heading="Details">
           <div class="row">
@@ -104,21 +111,21 @@
             </div>
           </div>
           <hr/>
-          <div class="row chr_leave-request-form__group">
+          <div class="row chr_leave-request-modal__form-group">
             <div class="col-xs-4">Opening Balance</div>
             <div class="col-xs-8">17.0</div>
           </div>
-          <div class="row chr_leave-request-form__group text-primary pointer"
+          <div class="row chr_leave-request-modal__form-group text-primary pointer"
                ng-click="modal.leaveRequest.isChangeExpanded = !modal.leaveRequest.isChangeExpanded">
             <div class="col-xs-4">
-              <i class="fa chr_leave-request-form__chevron"
+              <i class="fa chr_leave-request-modal__chevron"
                  aria-hidden="true"
                  ng-class="{ 'fa-chevron-right': !modal.leaveRequest.isChangeExpanded, ' fa-chevron-down': modal.leaveRequest.isChangeExpanded }"></i>
               Change
             </div>
             <div class="col-xs-8">2.5</div>
           </div>
-          <table class="table chr_leave-request-form__table" ng-show="modal.leaveRequest.isChangeExpanded">
+          <table class="table chr_leave-request-modal__table" ng-show="modal.leaveRequest.isChangeExpanded">
             <thead>
             <tr>
               <th>Date</th>
@@ -157,7 +164,7 @@
             </tr>
             </tfoot>
           </table>
-          <div class="row chr_leave-request-form__group">
+          <div class="row chr_leave-request-modal__form-group">
             <div class="col-xs-4">Closing Balance</div>
             <div class="col-xs-8">14.5</div>
           </div>
@@ -170,6 +177,43 @@
         </uib-tab>
 
       </uib-tabset>
+    </div>
+  </div>
+
+  <div ng-show="modal.leaveRequest.isAdmin"
+       class="row chr_leave-request-modal__response">
+    <div class="col-xs-12 form-horizontal">
+      <div class="form-group">
+        <label class="col-xs-4 chr_leave-request-modal__response-label">Response<span>*</span></label>
+        <div class="col-xs-8 chr_leave-request-modal__response-dropdown">
+          <div class="chr_custom-select chr_custom-select--full">
+            <select ng-model="modal.leaveRequest.selectedResponse">
+              <option value="1">- select -</option>
+              <option value="2">Approve</option>
+              <option value="3">Reject</option>
+              <option value="4">More Information Required</option>
+              <option value="5">Cancel</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div ng-show="modal.leaveRequest.selectedResponse == 3">
+      <div class="col-xs-12">Please add a comment:</div>
+      <div class="col-xs-12 chr_leave-request-modal__comment"
+           text-angular
+           prevent-animations
+           ta-toolbar="[['bold','italics','underline']]"
+           ng-model="myleave.leaveRequest.responseComment">
+      </div>
+
+      <div class="col-xs-12 chr_leave-request-modal__add-comment">
+        <hr/>
+        <button class="btn btn-link">
+          <i class="fa fa-comment-o" aria-hidden="true"></i>
+          Add comment
+        </button>
+      </div>
     </div>
   </div>
 </div>
