--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-request.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-request.html
@@ -8,8 +8,8 @@
 
 <div ng-show="modal.leaveRequest.isAdmin"
      class="row chr_leave-request-modal__user-info">
-    <span class="col-xs-6 chr_leave-request-modal__name">Lawrence Longnamesburg (81)</span>
-    <span class="col-xs-6 chr_leave-request-modal__status">Awaiting Approval</span>
+  <span class="col-xs-6">Lawrence Longnamesburg (81)</span>
+  <span class="col-xs-6">Awaiting Approval</span>
 </div>
 
 <div class="modal-body chr_leave-request-modal__form">
@@ -184,8 +184,10 @@
        class="row chr_leave-request-modal__response">
     <div class="col-xs-12 form-horizontal">
       <div class="form-group">
-        <label class="col-xs-4 chr_leave-request-modal__response-label">Response<span>*</span></label>
-        <div class="col-xs-8 chr_leave-request-modal__response-dropdown">
+        <label class="col-xs-4 control-label">Response
+          <i class="fa fa-asterisk"></i>
+        </label>
+        <div class="col-xs-8">
           <div class="chr_custom-select chr_custom-select--full">
             <select ng-model="modal.leaveRequest.selectedResponse">
               <option value="1">- select -</option>
@@ -200,19 +202,20 @@
     </div>
     <div ng-show="modal.leaveRequest.selectedResponse == 3">
       <div class="col-xs-12">Please add a comment:</div>
-      <div class="col-xs-12 chr_leave-request-modal__comment"
-           text-angular
-           prevent-animations
-           ta-toolbar="[['bold','italics','underline']]"
-           ng-model="myleave.leaveRequest.responseComment">
-      </div>
-
-      <div class="col-xs-12 chr_leave-request-modal__add-comment">
-        <hr/>
-        <button class="btn btn-link">
-          <i class="fa fa-comment-o" aria-hidden="true"></i>
-          Add comment
-        </button>
+      <div class="col-xs-12">
+        <div class="chr_wysiwyg"
+             text-angular
+             prevent-animations
+             ta-toolbar="[['bold','italics','underline']]"
+             ng-model="myleave.leaveRequest.responseComment">
+        </div>
+        <div class="chr_wysiwyg__action">
+          <hr/>
+          <button class="btn btn-link">
+            <i class="fa fa-comment-o" aria-hidden="true"></i>
+            Add comment
+          </button>
+        </div>
       </div>
     </div>
   </div>
