--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave.html
@@ -4,7 +4,7 @@
       <!--
       <button type="button" class="btn btn-primary" ng-click="myleave.showModal()">Record New Absence</button>
     -->
-      <button type="button" class="btn btn-primary" lr-model-directive>Record New Absence</button>
+      <button type="button" class="btn btn-primary" leave-request-popup>Record New Absence</button>
       <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
               data-toggle="dropdown">
         <span class="caret"></span>
