PCHR-1267: Draft of Public Holidays requests list

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -50,8 +50,6 @@
             <td>31</td>
             <td>3</td>
             <td>0</td>
-            <td>0</td>
-            <td>0</td>
             <td></td>
           </tr>
           <tr ng-show="report.sections.entitlements.open">
@@ -156,230 +154,14 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                    <tr ng-repeat="request in report.sections.holidays.data track by $index">
                       <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
+                      <td>{{::request.from_date}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td ng-repeat="absenceType in report.absenceTypes track by $index">
+                        {{request.type_id == absenceType.id ? request.balance_change : ''}}
                       </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
                       <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>31/05/2016</td>
-                      <td>Admin Approved</td>
-                      <td>-1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
                     </tr>
                   </tbody>
                 </table>
