--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -159,7 +159,7 @@
                       <td>{{::request.from_date}}</td>
                       <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{request.type_id == absenceType.id ? request.balance_change : ''}}
+                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
                       <td></td>
                     </tr>
@@ -203,151 +203,23 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td class="chr_leave-report__label">Vacation</td>
-                      <td>18/01/2015 - 22/01/2015</td>
-                      <td>Approved</td>
-                      <td>-4</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
+                    <tr ng-repeat="request in report.sections.approved.data track by $index">
+                      <td class="chr_leave-report__label">
+                        {{::report.absenceTypes[request.type_id].title}}
                       </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Sick</td>
-                      <td>25/11/2015 - 27/11/2015</td>
-                      <td>Approved</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>-2</td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
+                      <td>{{::request.from_date}} - {{::request.to_date}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td ng-repeat="absenceType in report.absenceTypes track by $index">
+                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Accrued TOIL (expires 20/03/2015)</td>
-                      <td>18/03/2015 - 20/03/2015</td>
-                      <td>Approved</td>
-                      <td></td>
-                      <td>2</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
+                      <td ng-if="report.actionsFor(request).length">
                         <div uib-dropdown dropdown-append-to-body>
                           <a href class="chr_leave-report__action" uib-dropdown-toggle>
                             <i class="fa fa-ellipsis-v"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">TOIL</td>
-                      <td>18/04/2015 - 22/04/2015</td>
-                      <td>Approved</td>
-                      <td></td>
-                      <td>-2</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Maternity</td>
-                      <td>01/06/2015 - 31/06/2015</td>
-                      <td>Approved</td>
-                      <td></td>
-                      <td></td>
-                      <td>-21</td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Other</td>
-                      <td>01/07/2015 - 10/07/2015</td>
-                      <td>Approved</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>-1</td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
+                            <li ng-repeat="action in report.actionsFor(request)">
+                              <a href="#">{{::action}}</a>
                             </li>
                           </ul>
                         </div>
@@ -412,51 +284,23 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td class="chr_leave-report__label">Vacation</td>
-                      <td>18/02/2015 - 22/02/2015</td>
-                      <td>Awaiting Approval</td>
-                      <td>-4</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
-                        <div uib-dropdown dropdown-append-to-body>
-                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
-                            <i class="fa fa-ellipsis-v"></i>
-                          </a>
-                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                          </ul>
-                        </div>
+                    <tr ng-repeat="request in report.sections.pending.data track by $index">
+                      <td class="chr_leave-report__label">
+                        {{::report.absenceTypes[request.type_id].title}}
                       </td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Accrued TOIL (expires 20/03/2015)</td>
-                      <td>17/01/2015</td>
-                      <td>More Information Required</td>
-                      <td></td>
-                      <td>1</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td>
+                      <td>{{::request.from_date}} - {{::request.to_date}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td ng-repeat="absenceType in report.absenceTypes track by $index">
+                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
+                      </td>
+                      <td ng-if="report.actionsFor(request).length">
                         <div uib-dropdown dropdown-append-to-body>
                           <a href class="chr_leave-report__action" uib-dropdown-toggle>
                             <i class="fa fa-ellipsis-v"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
-                            </li>
-                            <li>
-                              <a href="#">Lorem Ipsum</a>
+                            <li ng-repeat="action in report.actionsFor(request)">
+                              <a href="#">{{::action}}</a>
                             </li>
                           </ul>
                         </div>
@@ -514,59 +358,27 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td class="chr_leave-report__label">Sick</td>
-                      <td>18/05/2015 - 22/05/2015</td>
-                      <td>Rejected</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Vacation</td>
-                      <td>18/02/2015 - 22/02/2015</td>
-                      <td>Cancelled</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Late</td>
-                      <td>18/01/2015</td>
-                      <td>Approved</td>
-                      <td></td>
-                      <td>2</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Accrued TOIL (expires 20/03/2015)</td>
-                      <td></td>
-                      <td>Expired</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td class="chr_leave-report__label">Brought Forward (expires 31/03/2015)</td>
-                      <td></td>
-                      <td>Expired</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                    <tr ng-repeat="request in report.sections.other.data track by $index">
+                      <td class="chr_leave-report__label">
+                        {{::report.absenceTypes[request.type_id].title}}
+                      </td>
+                      <td>{{::request.from_date}} - {{::request.to_date}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td ng-repeat="absenceType in report.absenceTypes track by $index">
+                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
+                      </td>
+                      <td ng-if="report.actionsFor(request).length">
+                        <div uib-dropdown dropdown-append-to-body>
+                          <a href class="chr_leave-report__action" uib-dropdown-toggle>
+                            <i class="fa fa-ellipsis-v"></i>
+                          </a>
+                          <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
+                            <li ng-repeat="action in report.actionsFor(request)">
+                              <a href="#">{{::action}}</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </td>
                       <td></td>
                     </tr>
                   </tbody>
