--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -10,10 +10,10 @@
         </div>
         <div class="col-sm-3">
           <div class="chr_custom-select chr_custom-select--full">
-            <select>
-              <option value="1">Current Period (2016)</option>
-              <option value="2" selected>2017</option>
-              <option value="3">2018</option>
+            <select
+              ng-options="period as period.title for period in report.absencePeriods track by period.id"
+              ng-model="report.selectedPeriod"
+              ng-change="report.refresh()">
             </select>
           </div>
         </div>
@@ -29,7 +29,7 @@
             <th
               class="chr_leave-report__table__heading--type"
               ng-repeat="absenceType in report.absenceTypes track by $index">
-              {{::absenceType.title}}
+              {{absenceType.title}}
             </th>
             <th class="chr_leave-report__table__heading--action"></th>
           </tr>
@@ -64,7 +64,7 @@
                       <th
                         class="chr_leave-report__table__heading--type"
                         ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::absenceType.title}}
+                        {{absenceType.title}}
                       </th>
                       <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
@@ -132,7 +132,7 @@
             <td></td>
             <td></td>
             <td ng-repeat="absenceType in report.absenceTypes track by $index">
-              {{::absenceType.balanceChanges.publicHolidays}}
+              {{absenceType.balanceChanges.publicHolidays}}
             </td>
             <td></td>
           </tr>
@@ -148,7 +148,7 @@
                       <th
                         class="chr_leave-report__table__heading--type"
                         ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::absenceType.title}}
+                        {{absenceType.title}}
                       </th>
                       <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
@@ -156,10 +156,10 @@
                   <tbody>
                     <tr ng-repeat="request in report.sections.holidays.data track by $index">
                       <td class="chr_leave-report__label">Public Holiday</td>
-                      <td>{{::request.from_date}}</td>
-                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{request.from_date}}</td>
+                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
+                        {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
                       <td></td>
                     </tr>
@@ -181,7 +181,7 @@
             <td></td>
             <td></td>
             <td ng-repeat="absenceType in report.absenceTypes track by $index">
-              {{::absenceType.balanceChanges.approved}}
+              {{absenceType.balanceChanges.approved}}
             </td>
             <td></td>
           </tr>
@@ -197,7 +197,7 @@
                       <th
                         class="chr_leave-report__table__heading--type"
                         ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::absenceType.title}}
+                        {{absenceType.title}}
                       </th>
                       <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
@@ -205,12 +205,12 @@
                   <tbody>
                     <tr ng-repeat="request in report.sections.approved.data track by $index">
                       <td class="chr_leave-report__label">
-                        {{::report.absenceTypes[request.type_id].title}}
+                        {{report.absenceTypes[request.type_id].title}}
                       </td>
-                      <td>{{::request.from_date}} - {{::request.to_date}}</td>
-                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{request.from_date}} - {{request.to_date}}</td>
+                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
+                        {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
                       <td ng-if="report.actionsFor(request).length">
                         <div uib-dropdown dropdown-append-to-body>
@@ -219,7 +219,7 @@
                           </a>
                           <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                             <li ng-repeat="action in report.actionsFor(request)">
-                              <a href="#">{{::action}}</a>
+                              <a href="#">{{action}}</a>
                             </li>
                           </ul>
                         </div>
@@ -235,7 +235,7 @@
             <td></td>
             <td></td>
             <td ng-repeat="absenceType in report.absenceTypes track by $index">
-              {{::absenceType.remainder.current}}
+              {{absenceType.remainder.current}}
             </td>
             <td></td>
           </tr>
@@ -262,7 +262,7 @@
             <td
               class="chr_leave-report__table__heading--type"
               ng-repeat="absenceType in report.absenceTypes track by $index">
-              {{::absenceType.balanceChanges.pending}}
+              {{absenceType.balanceChanges.pending}}
             </td>
             <td class="chr_leave-report__table__heading--action"></td>
           </tr>
@@ -278,7 +278,7 @@
                       <th
                         class="chr_leave-report__table__heading--type"
                         ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::absenceType.title}}
+                        {{absenceType.title}}
                       </th>
                       <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
@@ -286,12 +286,12 @@
                   <tbody>
                     <tr ng-repeat="request in report.sections.pending.data track by $index">
                       <td class="chr_leave-report__label">
-                        {{::report.absenceTypes[request.type_id].title}}
+                        {{report.absenceTypes[request.type_id].title}}
                       </td>
-                      <td>{{::request.from_date}} - {{::request.to_date}}</td>
-                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{request.from_date}} - {{request.to_date}}</td>
+                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
+                        {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
                       <td ng-if="report.actionsFor(request).length">
                         <div uib-dropdown dropdown-append-to-body>
@@ -300,7 +300,7 @@
                           </a>
                           <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                             <li ng-repeat="action in report.actionsFor(request)">
-                              <a href="#">{{::action}}</a>
+                              <a href="#">{{action}}</a>
                             </li>
                           </ul>
                         </div>
@@ -316,7 +316,7 @@
             <td></td>
             <td></td>
             <td ng-repeat="absenceType in report.absenceTypes track by $index">
-              {{::absenceType.remainder.future}}
+              {{absenceType.remainder.future}}
             </td>
             <td></td>
           </tr>
@@ -352,7 +352,7 @@
                       <th
                         class="chr_leave-report__table__heading--type"
                         ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::absenceType.title}}
+                        {{absenceType.title}}
                       </th>
                       <th class="chr_leave-report__table__heading--action"></th>
                     </tr>
@@ -360,12 +360,12 @@
                   <tbody>
                     <tr ng-repeat="request in report.sections.other.data track by $index">
                       <td class="chr_leave-report__label">
-                        {{::report.absenceTypes[request.type_id].title}}
+                        {{report.absenceTypes[request.type_id].title}}
                       </td>
-                      <td>{{::request.from_date}} - {{::request.to_date}}</td>
-                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{request.from_date}} - {{request.to_date}}</td>
+                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
-                        {{::(request.type_id == absenceType.id ? request.balance_change : '')}}
+                        {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
                       <td ng-if="report.actionsFor(request).length">
                         <div uib-dropdown dropdown-append-to-body>
@@ -374,7 +374,7 @@
                           </a>
                           <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                             <li ng-repeat="action in report.actionsFor(request)">
-                              <a href="#">{{::action}}</a>
+                              <a href="#">{{action}}</a>
                             </li>
                           </ul>
                         </div>
