--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -11,7 +11,7 @@
         <div class="col-sm-3">
           <div class="chr_custom-select chr_custom-select--full">
             <select
-              ng-options="period as period.title for period in report.absencePeriods track by period.id"
+              ng-options="period as report.labelPeriod(period) for period in report.absencePeriods track by period.id"
               ng-model="report.selectedPeriod"
               ng-change="report.refresh()">
             </select>
