--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -219,7 +219,7 @@
                           </a>
                           <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                             <li ng-repeat="action in report.actionsFor(request)">
-                              <a href="#">{{action}}</a>
+                              <a href="#" ng-click="report.action(request, action)">{{action}}</a>
                             </li>
                           </ul>
                         </div>
