PCHR-1267: Disable watch for leave requests status

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -157,7 +157,7 @@
                     <tr ng-repeat="request in report.sections.holidays.data track by $index">
                       <td class="chr_leave-report__label">Public Holiday</td>
                       <td>{{request.from_date}}</td>
-                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
                         {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
@@ -208,7 +208,7 @@
                         {{report.absenceTypes[request.type_id].title}}
                       </td>
                       <td>{{request.from_date}} - {{request.to_date}}</td>
-                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
                         {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
@@ -289,7 +289,7 @@
                         {{report.absenceTypes[request.type_id].title}}
                       </td>
                       <td>{{request.from_date}} - {{request.to_date}}</td>
-                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
                         {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
@@ -363,7 +363,7 @@
                         {{report.absenceTypes[request.type_id].title}}
                       </td>
                       <td>{{request.from_date}} - {{request.to_date}}</td>
-                      <td>{{report.leaveRequestStatuses[request.status_id].label}}</td>
+                      <td>{{::report.leaveRequestStatuses[request.status_id].label}}</td>
                       <td ng-repeat="absenceType in report.absenceTypes track by $index">
                         {{(request.type_id == absenceType.id ? request.balance_change : '')}}
                       </td>
